--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 /재고관리자동화/html/
 /재고관리자동화/webpage/vendor/
+/재고관리자동화/webpage/css/
+/재고관리자동화/webpage/img/
+/재고관리자동화/webpage/js/
+/재고관리자동화/webpage/scss/
