--- a/재고관리자동화/placeorderAutomation/src/main/resources/application.yml
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/application.yml
@@ -7,11 +7,10 @@ spring:
 
   jpa:
     database: mysql
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     show-sql: true
     hibernate:
-      ddl-auto: create-drop
-      use-new-id-generator-mappings: true
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
