--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-/재고관리자동화/html/
+/재고관리자동화/html/startbootstrap-sb-admin-2-gh-pages/
 /재고관리자동화/webpage/vendor/
 /재고관리자동화/webpage/css/
 /재고관리자동화/webpage/img/
