--- a/재고관리자동화/placeorderAutomation/src/main/resources/application.yml
+++ b/재고관리자동화/placeorderAutomation/src/main/resources/application.yml
@@ -18,13 +18,12 @@ spring:
   thymeleaf:
     prefix: classpath:/templates/
     suffix: .html
-    cache: true
+    cache: false
     check-template-location: true
   #  https://dev-overload.tistory.com/25
 
   devtools:
     livereload.enabled: true
-
 
 logging:
   level:
