BOM 페이지 작성

--- a/재고관리자동화/placeorderAutomation/build.gradle
+++ b/재고관리자동화/placeorderAutomation/build.gradle
@@ -34,6 +34,12 @@ dependencies {
 	//httpClient
 	implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5'
 }
+bootJar {
+
+	jar.enabled = true
+	mainClass = 'com.union.placeorderAutomation.PlaceorderAutomationApplication'
+}
+
 
 test {
 	useJUnitPlatform()
