--- a/재고관리자동화/seosan/build.gradle
+++ b/재고관리자동화/seosan/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 //    testImplementation 'org.springframework.security:spring-security-test'
     implementation 'org.springframework.mobile:spring-mobile-device:1.1.5.RELEASE'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.9'
 }
 
 test {
